--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
   <meta charset="UTF-8">
-  <title>是「谁」的杭州美食地图</title>
+  <title>是「也」的杭州地图</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     html, body, #map { height: 100%; margin: 0; padding: 0; }
