--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
   },
   {
     "name": "天地栋宇",
-    "type": "嘘～",
+    "type": "川菜",
     "location": "120.161176,30.334402",
     "address": "secret",
     "photo": "https://github.com/YeNot996/ye_hangzhou_map/blob/main/61749807646_.pic.jpg",
