--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     "type": "川菜",
     "location": "120.161176,30.334402",
     "address": "secret",
-    "photo": "https://github.com/YeNot996/ye_hangzhou_map/blob/main/61749807646_.pic.jpg",
+    "photo": "https://gitee.com/wurunxun/ye_hangzhou_map/blob/master/61749807646_.pic.jpg",
     "cost": "120",
     "open_time": "一般周末14:00-18:00",
     "rating": "50",
