--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
     "type": "川菜",
     "location": "120.161176,30.334402",
     "address": "secret",
-    "photo": "https://gitee.com/wurunxun/ye_hangzhou_map/blob/master/61749807646_.pic.jpg",
+    "photo": "https://postimg.cc/cgJNwcD6",
     "cost": "120",
     "open_time": "一般周末14:00-18:00",
     "rating": "50",
     "phone": "",
     "advantage": "梦开始的地方",
     "recommend_index": "5",
-    "category": "川菜"
+    "category": "你猜"
   }
 ];
     // 图标映射表，按最新icon.txt
