--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     "type": "川菜",
     "location": "120.161176,30.334402",
     "address": "secret",
-    "photo": "https://postimg.cc/cgJNwcD6",
+    "photo": "https://i.postimg.cc/ZR8Kk7pP/61749807646-pic.jpg",
     "cost": "120",
     "open_time": "一般周末14:00-18:00",
     "rating": "50",
